--- a/LayeredArchitecture/CartingService/CartingService.csproj
+++ b/LayeredArchitecture/CartingService/CartingService.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.0.3" />
+    <PackageReference Include="LiteDB" Version="5.0.11" />
   </ItemGroup>
 
 </Project>
