--- a/LayeredArchitecture/CatalogService.BLL/CatalogService.BLL.csproj
+++ b/LayeredArchitecture/CatalogService.BLL/CatalogService.BLL.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CatalogService.DLL\CatalogService.DLL.csproj" />
     <ProjectReference Include="..\CatalogService.Domain\CatalogService.Domain.csproj" />
   </ItemGroup>
 
