--- a/LayeredArchitecture/CatalogService.Infrastructure/CatalogService.Infrastructure.csproj
+++ b/LayeredArchitecture/CatalogService.Infrastructure/CatalogService.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CatalogService.Domain\CatalogService.Domain.csproj" />
+    <ProjectReference Include="..\CategoryService.Application\CategoryService.Application.csproj" />
   </ItemGroup>
 
 </Project>
