--- a/LayeredArchitecture/CategoryService.Application/CategoryService.Application.csproj
+++ b/LayeredArchitecture/CategoryService.Application/CategoryService.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CatalogService.Domain\CatalogService.Domain.csproj" />
   </ItemGroup>
 
