--- a/LayeredArchitecture/CatalogService.Infrastructure/CatalogService.Infrastructure.csproj
+++ b/LayeredArchitecture/CatalogService.Infrastructure/CatalogService.Infrastructure.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.6" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CategoryService.Application\CategoryService.Application.csproj" />
   </ItemGroup>
 
