--- a/LayeredArchitecture/CategoryService.Application/CategoryService.Application.csproj
+++ b/LayeredArchitecture/CategoryService.Application/CategoryService.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.0.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
