--- a/LayeredArchitecture/CartingService.Api/CartingService.Api.csproj
+++ b/LayeredArchitecture/CartingService.Api/CartingService.Api.csproj
@@ -11,10 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
-  <ItemGroup>
+	<ItemGroup>
     <ProjectReference Include="..\CartingService\CartingService.csproj" />
   </ItemGroup>
 
