--- a/LayeredArchitecture/CartingService/CartingService.csproj
+++ b/LayeredArchitecture/CartingService/CartingService.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.0.3" />
     <PackageReference Include="LiteDB" Version="5.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NotificationClient\NotificationClient.csproj" />
   </ItemGroup>
 
 </Project>
