--- a/LayeredArchitecture/CartingService.Api/CartingService.Api.csproj
+++ b/LayeredArchitecture/CartingService.Api/CartingService.Api.csproj
@@ -8,10 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Controllers\WeatherForecastController.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -19,6 +15,8 @@
 
 	<ItemGroup>
     <ProjectReference Include="..\CartingService\CartingService.csproj" />
+    <ProjectReference Include="..\Listener\Listener.csproj" />
+    <ProjectReference Include="..\NotificationClient\NotificationClient.csproj" />
   </ItemGroup>
 
 </Project>
