--- a/LayeredArchitecture/CartingService/CartingService.csproj
+++ b/LayeredArchitecture/CartingService/CartingService.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.0.3" />
-    <PackageReference Include="LiteDB" Version="5.0.11" />
+    <PackageReference Include="LiteDB" Version="5.0.12" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
