--- a/LayeredArchitecture/IdentityServer/IdentityServer.csproj
+++ b/LayeredArchitecture/IdentityServer/IdentityServer.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.12" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
 </Project>
