--- a/LayeredArchitecture/CatalogService.Api/CatalogService.Api.csproj
+++ b/LayeredArchitecture/CatalogService.Api/CatalogService.Api.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CatalogService.Infrastructure\CatalogService.Infrastructure.csproj" />
+    <ProjectReference Include="..\IdentityServiceClient\IdentityServiceClient.csproj" />
   </ItemGroup>
 
 </Project>
