--- a/LayeredArchitecture/IdentityServer/IdentityServer.csproj
+++ b/LayeredArchitecture/IdentityServer/IdentityServer.csproj
@@ -6,9 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LiteDB" Version="5.0.12" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IdentityServiceClient\IdentityServiceClient.csproj" />
   </ItemGroup>
 
 </Project>
