Add logging and correlation id

--- a/LayeredArchitecture/CartingService.Api/CartingService.Api.csproj
+++ b/LayeredArchitecture/CartingService.Api/CartingService.Api.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -15,6 +16,7 @@
 
 	<ItemGroup>
     <ProjectReference Include="..\CartingService\CartingService.csproj" />
+    <ProjectReference Include="..\Logging\Logging.csproj" />
     <ProjectReference Include="..\NotificationClient\NotificationClient.csproj" />
   </ItemGroup>
 
