--- a/LayeredArchitecture/CartingService.Api/appsettings.json
+++ b/LayeredArchitecture/CartingService.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=25fa3445-6e1e-4179-8e75-f84ee2917603;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
